@@ -238,8 +238,10 @@ FBCALL FBSTRING    *fb_RTrimAny         ( FBSTRING *str, FBSTRING *pattern );
 FBCALL FBSTRING    *fb_TRIM             ( FBSTRING *src );
 FBCALL FBSTRING    *fb_TrimEx           ( FBSTRING *str, FBSTRING *pattern );
 FBCALL FBSTRING    *fb_TrimAny          ( FBSTRING *str, FBSTRING *pattern );
-FBCALL FBSTRING    *fb_LCASE            ( FBSTRING *str );
-FBCALL FBSTRING    *fb_UCASE            ( FBSTRING *str );
+FBCALL FBSTRING    *fb_StrLcase2        ( FBSTRING *src, int mode );
+FBCALL FBSTRING    *fb_LCASE            ( FBSTRING *src );
+FBCALL FBSTRING    *fb_StrUcase2        ( FBSTRING *src, int mode );
+FBCALL FBSTRING    *fb_UCASE            ( FBSTRING *src );
 FBCALL FBSTRING    *fb_StrFill1         ( int cnt, int fchar );
 FBCALL FBSTRING    *fb_StrFill2         ( int cnt, FBSTRING *src );
 FBCALL int          fb_StrInstr         ( int start, FBSTRING *src, FBSTRING *patt );
@@ -307,8 +309,10 @@ FBCALL FB_WCHAR    *fb_WstrRTrimAny     ( const FB_WCHAR *str, const FB_WCHAR *p
 FBCALL FB_WCHAR    *fb_WstrTrim         ( const FB_WCHAR *src );
 FBCALL FB_WCHAR    *fb_WstrTrimEx       ( const FB_WCHAR *str, const FB_WCHAR *pattern );
 FBCALL FB_WCHAR    *fb_WstrTrimAny      ( const FB_WCHAR *str, const FB_WCHAR *pattern );
-FBCALL FB_WCHAR    *fb_WstrLcase        ( const FB_WCHAR *str );
-FBCALL FB_WCHAR    *fb_WstrUcase        ( const FB_WCHAR *str );
+FBCALL FB_WCHAR    *fb_WstrLcase2       ( const FB_WCHAR *src, int mode );
+FBCALL FB_WCHAR    *fb_WstrLcase        ( const FB_WCHAR *src );
+FBCALL FB_WCHAR    *fb_WstrUcase2       ( const FB_WCHAR *src, int mode );
+FBCALL FB_WCHAR    *fb_WstrUcase        ( const FB_WCHAR *src );
 FBCALL FB_WCHAR    *fb_WstrFill1        ( int cnt, FB_WCHAR c );
 FBCALL FB_WCHAR    *fb_WstrFill2        ( int cnt, const FB_WCHAR *src );
 FBCALL int          fb_WstrInstr        ( int start, const FB_WCHAR *src,
