@@ -3,8 +3,7 @@
 #include "fb.h"
 #include <ctype.h>
 
-/*:::::*/
-FBCALL FBSTRING *fb_UCASE ( FBSTRING *src )
+FBCALL FBSTRING *fb_StrUcase2( FBSTRING *src, int mode )
 {
 	FBSTRING 	*dst;
 	int 		i, c, len = 0;
@@ -15,41 +14,40 @@ FBCALL FBSTRING *fb_UCASE ( FBSTRING *src )
 
 	FB_STRLOCK();
 
-	if( src->data != NULL )
-	{
+	if( src->data ) {
 		len = FB_STRSIZE( src );
 
 		/* alloc temp string */
 		dst = fb_hStrAllocTemp_NoLock( NULL, len );
-	}
-	else
+	} else {
 		dst = NULL;
+	}
 
-	if( dst != NULL )
-	{
-		/* to lower */
+	if( dst ) {
 		s = src->data;
 		d = dst->data;
-		for( i = 0; i < len; i++ )
-        {
-			c = FB_CHAR_TO_INT(*s++);
 
-#if 0
-			if( (c >= 97) && (c <= 122) )
-                c -= 97 - 65;
-#else
-            if( islower( c ) )
-                c = toupper( c );
-#endif
-
-			*d++ = (char)c;
+		if( mode == 1 ) {
+			for( i = 0; i < len; i++ ) {
+				c = *s++;
+				if( (c >= 97) && (c <= 122) )
+					c -= 97 - 65;
+				*d++ = c;
+			}
+		} else {
+			for( i = 0; i < len; i++ ) {
+				c = *s++;
+				if( islower( c ) )
+					c = toupper( c );
+				*d++ = c;
+			}
 		}
 
 		/* null char */
 		*d = '\0';
-	}
-	else
+	} else {
 		dst = &__fb_ctx.null_desc;
+	}
 
 	/* del if temp */
 	fb_hStrDelTemp_NoLock( src );
@@ -57,4 +55,9 @@ FBCALL FBSTRING *fb_UCASE ( FBSTRING *src )
 	FB_STRUNLOCK();
 
 	return dst;
+}
+
+FBCALL FBSTRING *fb_UCASE( FBSTRING *src )
+{
+	return fb_StrUcase2( src, 0 );
 }
